updated foods routes
